Removing contact section, it's not working. Yay.

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     <div class="navIcon">
                         <a href="#about"><i class="fas fa-info"></i></a>
                     </div>
-                    <div class="navIcon">
+                    <!--<div class="navIcon">
                         <a href="#contact"><i class="far fa-envelope"></i></a>
-                    </div>
+                    </div>-->
                 </div>
 
                 <button id="navToggler" onclick="toggleNav()"></button>
@@ -99,7 +99,7 @@
             </div>
 
             <!--Contact Form-->
-            <div id="contact">
+            <!--<div id="contact">
                 <h1>CONTACT US</h1>
                 <h3 id="contactInfo">For more information on how you can schedule a transport service, or if you have other questions, fill out the form below and a member of the Beard Industries team will reach out to you as quickly as we can!</h3>
                 <form id="contact-form" method="post">
@@ -115,7 +115,7 @@
                     <button id="sendIt" type="button" onClick="submitToAPI(event)" class="btn btn-lg" style="margin-top:20px;">Submit</button>
                 </form>
 
-            </div>
+            </div>-->
 
             
 
@@ -129,7 +129,7 @@
                 <ul>
                     <li><a href="#index">home</a></li>
                     <li><a href="#about">about</a></li>
-                    <li><a href="#contact">contact</a></li>
+                    <!--<li><a href="#contact">contact</a></li>-->
                 </ul>
             </div>
 
@@ -142,8 +142,9 @@
             <!--Phone Number-->
             <h3><i class="fa fa-phone"></i> 253.820.0210</h3>
 
-            <!--Email-->
+            <!--Email
             <h3><i class="fa fa-envelope"></i> info@beardindustries.com</h3>
+            -->
                     
             <!--Copyright-->
             <p>Beard Industries LLC Copyright 2020</p>
