--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
 
         <!--Page Title-->
-        <title>Beard Industries - Hauling & Transport Services - Carslile, PA</title>
+        <title>Beard Industries - Hauling & Transport Services - Carlisle, PA</title>
 
         <!--Metadata-->
         <meta charset="UTF-8">
@@ -31,7 +31,7 @@
                 <li id="logo"></li>
                 
                 <li id="buttons">
-                    <a class="" href="tel:2538200210"><i class="fa fa-phone"></i><span> CALL NOW</span></a>
+                    <a class="" href="tel:7175858997"><i class="fa fa-phone"></i><span> CALL NOW</span></a>
                     <a href="#about"><i class="fas fa-info"></i> LEARN MORE</a>
                     <a id="home" href="#index"><i class="fas fa-home"></i></a>
                 </li>
@@ -45,7 +45,7 @@
                     <div id="img1">
                         <h1>WELCOME TO BEARD INDUSTRIES!</h1>
                         <h4>HOTSHOT | FREIGHT | LTL | TRANSPORT | HAULING</h4>
-                        <h1>CARSLILE, PA</h1>
+                        <h1>CARLISLE, PA</h1>
                         <h5 id="right">Beard Industries is proud to offer hauling and transportation related services within the greater Pennsylvania area!</h5>
                     </div>
                 </div>
@@ -66,8 +66,6 @@
                 <div class="row2">
                     <div id="img4"></div>
                     <p style="text-align: center;">Beard Industries LLC is proud to offer heavy equipment hauling and transportation services within the greater Pennsylvania area. We offer commercial logistics solutions for many local Pennsylvania area companies, and are happy to help with projects of all sizes. From round bails of hay to antique farm equipment, you can trust the experts at Beard Industries LLC have both the tools and the know-how to get it there safely!</p>
-                    <div id="img5"></div>
-                    <p style="text-align: center;">Based out of Carslile Pennsylvania, Beard Industries LLC is owned and operated by Mat Wood. Mat was born and raised in Western Washington and spent some time living all throughout Colorado before settling down in Carslile, Pennsylvania where he and his family now reside. When he's not driving, he can be found back home spending time with his wife and 2 children, or outside working on one of his many automotive or other DIY projects.</p>
                 </div>
             </section>
 
@@ -86,9 +84,7 @@
             <!--Social Media-->
             <section>
                 <ul>
-                    <li><a class="" href="https://www.facebook.com/haulwiththebeard/"><i class="fab fa-facebook-f"></i> </a></li>
-                    <li><a class="" href="https://www.instagram.com/beard_industries_llc"> <i class="fab fa-instagram"></i></a></li>
-                    <li><a class="" href="tel:2538200210"><i class="fa fa-phone"></i></a></li>
+                    <li><a class="" href="tel:7175858997"><i class="fa fa-phone"></i></a></li>
                 </ul>
             </section>
             
